tests/NormalTests/paczka1/small_fuzzy/74836252.err
Error in line 1: xCOOm A140 4,0
Error in line 2: bGi44 S458 49,5
Error in line 6: bGi44 S702 89,5
Error in line 12: InGySgLN6Ft S702 99,1
